// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InvoiceDetailsTable - Integration Tests Snapshot Tests should match snapshot for empty invoice 1`] = `<div />`;

exports[`InvoiceDetailsTable - Integration Tests Snapshot Tests should match snapshot for invoice with 1 subscription 1`] = `
<div>
  <section
    class="[&_table]:w-full [&_table]:table-fixed [&_table]:border-collapse [&_table>thead>tr>th]:sticky [&_table>thead>tr>th]:top-[theme("spacing.nav")] [&_table>thead>tr>th]:z-10 [&_table>thead>tr>th]:bg-white [&_table>thead>tr>th]:pb-3 [&_table>thead>tr>th]:pt-8 [&_table>thead>tr>th]:shadow-b [&_table>thead>tr>th:not(:first-child)]:line-break-anywhere [&_table>thead>tr>th:not(:last-child)]:pr-3 [&_table>thead>tr>th:nth-child(1)]:text-left [&_table>thead>tr>th]:overflow-hidden [&_table>thead>tr>th]:text-right [&_table>tbody>tr>td:not(:first-child)]:line-break-anywhere [&_table>tbody>tr>td:not(:last-child)]:pr-3 [&_table>tbody>tr>td:nth-child(1)]:text-left [&_table>tbody>tr>td]:min-h-11 [&_table>tbody>tr>td]:overflow-hidden [&_table>tbody>tr>td]:py-3 [&_table>tbody>tr>td]:text-right [&_table>tbody>tr>td]:align-top [&_table>tbody>tr>td]:shadow-b [&_table>tbody>tr.has-details>td]:min-h-6 [&_table>tbody>tr.has-details>td]:pb-1 [&_table>tbody>tr.has-details>td]:pl-0 [&_table>tbody>tr.has-details>td]:pr-3 [&_table>tbody>tr.has-details>td]:pt-3 [&_table>tbody>tr.has-details>td]:shadow-none [&_table>tbody>tr.details-line>td:last-child]:pr-0 [&_table>tbody>tr.details-line>td]:min-h-6 [&_table>tbody>tr.details-line>td]:py-1 [&_table>tbody>tr.details-line>td]:pl-4 [&_table>tbody>tr.details-line>td]:pr-3 [&_table>tbody>tr.details-line>td]:align-top [&_table>tbody>tr.details-line>td]:shadow-none [&_table>tbody>tr.subtotal>td:last-child]:pr-0 [&_table>tbody>tr.subtotal>td]:pb-3 [&_table>tbody>tr.subtotal>td]:pl-4 [&_table>tbody>tr.subtotal>td]:pr-3 [&_table>tbody>tr.subtotal>td]:pt-1 [&_table>tbody>tr.subtotal>td]:shadow-b [&_table>tbody>tr.line-collapse>td]:!p-0 [&_table>tbody>tr.line-collapse>td_.collapse-header]:block [&_table>tbody>tr.line-collapse>td_.collapse-header]:w-full [&_table>tbody>tr.line-collapse>td_.collapse-header]:py-3 [&_table>tbody>tr.line-collapse>td_.collapse-header]:shadow-b [&_table>tfoot>tr>td]:px-0 [&_table>tfoot>tr>td]:py-3 [&_table>tfoot>tr>td]:text-right [&_table>tfoot>tr>td:nth-child(2)]:text-left [&_table>tfoot>tr>td:nth-child(2)]:shadow-b [&_table>tfoot>tr>td:nth-child(3)]:shadow-b [&_table>tfoot>tr>td:nth-child(3)]:line-break-anywhere [&_table>tfoot>tr>td:nth-child(1)]:w-[50%] [&_table>tfoot>tr>td:nth-child(2)]:w-[35%] [&_table>tfoot>tr>td:nth-child(3)]:w-[15%] [&_table>thead>tr>th:nth-child(1)]:w-[50%] [&_table>thead>tr>th:nth-child(2)]:w-[20%] [&_table>thead>tr>th:nth-child(3)]:w-[10%] [&_table>thead>tr>th:nth-child(4)]:w-[20%] [&_table>tbody>tr>td:nth-child(1)]:w-[50%] [&_table>tbody>tr>td:nth-child(2)]:w-[20%] [&_table>tbody>tr>td:nth-child(3)]:w-[10%] [&_table>tbody>tr>td:nth-child(4)]:w-[20%]"
  >
    <div
      class="[&>table:not(:nth-last-child(2))]:mb-8"
    >
      <table
        data-test="invoice-details-subscription-table"
      >
        <thead
          class=""
        >
          <tr>
            <th>
              <div
                class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="captionHl"
              >
                Main Subscription
              </div>
            </th>
            <th>
              <div
                class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="captionHl"
              >
                Units
              </div>
            </th>
            <th>
              <div
                class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="captionHl"
              >
                Tax
              </div>
            </th>
            <th>
              <div
                class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="captionHl"
              >
                Amount
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              colspan="4"
            >
              <div
                class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="captionHl"
              >
                Fees from Dec 31, 2023 to Jan 31, 2024
              </div>
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              colspan="1"
            >
              <div
                class=MuiStack-root css-hash-MuiStack-root
              >
                <div
                  class=MuiTypography-root MuiTypography-bodyHl whitespace-pre-line css-hash-MuiTypography-root
                  data-test="bodyHl"
                >
                  Monthly subscription fee - Premium Plan
                </div>
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="body"
              >
                0
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="body"
              >
                0%
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="body"
              >
                $50.00
              </div>
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              colspan="1"
            >
              <div
                class=MuiStack-root css-hash-MuiStack-root
              >
                <div
                  class=MuiTypography-root MuiTypography-bodyHl whitespace-pre-line css-hash-MuiTypography-root
                  data-test="bodyHl"
                >
                  API Calls
                </div>
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="body"
              >
                100
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="body"
              >
                0%
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="body"
              >
                $50.00
              </div>
            </td>
          </tr>
        </tbody>
      </table>
      <table>
        <tfoot>
          <tr>
            <td />
            <td
              colspan="2"
            >
              <div
                class=MuiTypography-root MuiTypography-bodyHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="bodyHl"
              >
                Subtotal (excl. tax)
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="invoice-details-table-footer-subtotal-excl-tax-value"
              >
                $100.00
              </div>
            </td>
          </tr>
          <tr>
            <td />
            <td
              colspan="2"
            >
              <div
                class=MuiTypography-root MuiTypography-bodyHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="bodyHl"
              >
                Tax (0%)
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="body"
              >
                $0.00
              </div>
            </td>
          </tr>
          <tr>
            <td />
            <td
              colspan="2"
            >
              <div
                class=MuiTypography-root MuiTypography-bodyHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="bodyHl"
              >
                Subtotal (incl. tax)
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="invoice-details-table-footer-subtotal-incl-tax-value"
              >
                $110.00
              </div>
            </td>
          </tr>
          <tr>
            <td />
            <td
              colspan="2"
            >
              <div
                class=MuiTypography-root MuiTypography-bodyHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="bodyHl"
              >
                Total
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="invoice-details-table-footer-total-value"
              >
                $110.00
              </div>
            </td>
          </tr>
          <tr>
            <td />
            <td
              colspan="2"
            >
              <div
                class=MuiTypography-root MuiTypography-bodyHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="bodyHl"
              >
                Amount settled
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="invoice-details-table-footer-total-paid-value"
              >
                $0.00
              </div>
            </td>
          </tr>
          <tr>
            <td />
            <td
              colspan="2"
            >
              <div
                class=MuiTypography-root MuiTypography-bodyHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="bodyHl"
              >
                Amount due
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="invoice-details-table-footer-total-due-value"
              >
                $0.00
              </div>
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </section>
</div>
`;

exports[`InvoiceDetailsTable - Integration Tests Snapshot Tests should match snapshot for invoice with 2 subscriptions 1`] = `
<div>
  <section
    class="[&_table]:w-full [&_table]:table-fixed [&_table]:border-collapse [&_table>thead>tr>th]:sticky [&_table>thead>tr>th]:top-[theme("spacing.nav")] [&_table>thead>tr>th]:z-10 [&_table>thead>tr>th]:bg-white [&_table>thead>tr>th]:pb-3 [&_table>thead>tr>th]:pt-8 [&_table>thead>tr>th]:shadow-b [&_table>thead>tr>th:not(:first-child)]:line-break-anywhere [&_table>thead>tr>th:not(:last-child)]:pr-3 [&_table>thead>tr>th:nth-child(1)]:text-left [&_table>thead>tr>th]:overflow-hidden [&_table>thead>tr>th]:text-right [&_table>tbody>tr>td:not(:first-child)]:line-break-anywhere [&_table>tbody>tr>td:not(:last-child)]:pr-3 [&_table>tbody>tr>td:nth-child(1)]:text-left [&_table>tbody>tr>td]:min-h-11 [&_table>tbody>tr>td]:overflow-hidden [&_table>tbody>tr>td]:py-3 [&_table>tbody>tr>td]:text-right [&_table>tbody>tr>td]:align-top [&_table>tbody>tr>td]:shadow-b [&_table>tbody>tr.has-details>td]:min-h-6 [&_table>tbody>tr.has-details>td]:pb-1 [&_table>tbody>tr.has-details>td]:pl-0 [&_table>tbody>tr.has-details>td]:pr-3 [&_table>tbody>tr.has-details>td]:pt-3 [&_table>tbody>tr.has-details>td]:shadow-none [&_table>tbody>tr.details-line>td:last-child]:pr-0 [&_table>tbody>tr.details-line>td]:min-h-6 [&_table>tbody>tr.details-line>td]:py-1 [&_table>tbody>tr.details-line>td]:pl-4 [&_table>tbody>tr.details-line>td]:pr-3 [&_table>tbody>tr.details-line>td]:align-top [&_table>tbody>tr.details-line>td]:shadow-none [&_table>tbody>tr.subtotal>td:last-child]:pr-0 [&_table>tbody>tr.subtotal>td]:pb-3 [&_table>tbody>tr.subtotal>td]:pl-4 [&_table>tbody>tr.subtotal>td]:pr-3 [&_table>tbody>tr.subtotal>td]:pt-1 [&_table>tbody>tr.subtotal>td]:shadow-b [&_table>tbody>tr.line-collapse>td]:!p-0 [&_table>tbody>tr.line-collapse>td_.collapse-header]:block [&_table>tbody>tr.line-collapse>td_.collapse-header]:w-full [&_table>tbody>tr.line-collapse>td_.collapse-header]:py-3 [&_table>tbody>tr.line-collapse>td_.collapse-header]:shadow-b [&_table>tfoot>tr>td]:px-0 [&_table>tfoot>tr>td]:py-3 [&_table>tfoot>tr>td]:text-right [&_table>tfoot>tr>td:nth-child(2)]:text-left [&_table>tfoot>tr>td:nth-child(2)]:shadow-b [&_table>tfoot>tr>td:nth-child(3)]:shadow-b [&_table>tfoot>tr>td:nth-child(3)]:line-break-anywhere [&_table>tfoot>tr>td:nth-child(1)]:w-[50%] [&_table>tfoot>tr>td:nth-child(2)]:w-[35%] [&_table>tfoot>tr>td:nth-child(3)]:w-[15%] [&_table>thead>tr>th:nth-child(1)]:w-[50%] [&_table>thead>tr>th:nth-child(2)]:w-[20%] [&_table>thead>tr>th:nth-child(3)]:w-[10%] [&_table>thead>tr>th:nth-child(4)]:w-[20%] [&_table>tbody>tr>td:nth-child(1)]:w-[50%] [&_table>tbody>tr>td:nth-child(2)]:w-[20%] [&_table>tbody>tr>td:nth-child(3)]:w-[10%] [&_table>tbody>tr>td:nth-child(4)]:w-[20%]"
  >
    <div
      class="[&>table:not(:nth-last-child(2))]:mb-8"
    >
      <table
        data-test="invoice-details-subscription-table"
      >
        <thead
          class=""
        >
          <tr>
            <th>
              <div
                class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="captionHl"
              >
                Monthly Subscription
              </div>
            </th>
            <th>
              <div
                class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="captionHl"
              >
                Units
              </div>
            </th>
            <th>
              <div
                class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="captionHl"
              >
                Tax
              </div>
            </th>
            <th>
              <div
                class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="captionHl"
              >
                Amount
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              colspan="4"
            >
              <div
                class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="captionHl"
              >
                Fees from Dec 31, 2023 to Jan 31, 2024
              </div>
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              colspan="1"
            >
              <div
                class=MuiStack-root css-hash-MuiStack-root
              >
                <div
                  class=MuiTypography-root MuiTypography-bodyHl whitespace-pre-line css-hash-MuiTypography-root
                  data-test="bodyHl"
                >
                  Monthly subscription fee - Premium Plan
                </div>
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="body"
              >
                0
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="body"
              >
                0%
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="body"
              >
                $50.00
              </div>
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              colspan="1"
            >
              <div
                class=MuiStack-root css-hash-MuiStack-root
              >
                <div
                  class=MuiTypography-root MuiTypography-bodyHl whitespace-pre-line css-hash-MuiTypography-root
                  data-test="bodyHl"
                >
                  API Calls
                </div>
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="body"
              >
                0
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="body"
              >
                0%
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="body"
              >
                $50.00
              </div>
            </td>
          </tr>
        </tbody>
      </table>
      <table
        data-test="invoice-details-subscription-table"
      >
        <thead
          class=""
        >
          <tr>
            <th>
              <div
                class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="captionHl"
              >
                Yearly Subscription
              </div>
            </th>
            <th>
              <div
                class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="captionHl"
              >
                Units
              </div>
            </th>
            <th>
              <div
                class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="captionHl"
              >
                Tax
              </div>
            </th>
            <th>
              <div
                class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="captionHl"
              >
                Amount
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              colspan="4"
            >
              <div
                class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="captionHl"
              >
                Fees from Dec 31, 2023 to Dec 31, 2024
              </div>
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              colspan="1"
            >
              <div
                class=MuiStack-root css-hash-MuiStack-root
              >
                <div
                  class=MuiTypography-root MuiTypography-bodyHl whitespace-pre-line css-hash-MuiTypography-root
                  data-test="bodyHl"
                >
                  Yearly subscription fee - Enterprise Plan
                </div>
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="body"
              >
                0
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="body"
              >
                0%
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="body"
              >
                $70.00
              </div>
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              colspan="1"
            >
              <div
                class=MuiStack-root css-hash-MuiStack-root
              >
                <div
                  class=MuiTypography-root MuiTypography-bodyHl whitespace-pre-line css-hash-MuiTypography-root
                  data-test="bodyHl"
                >
                  Storage
                </div>
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="body"
              >
                0
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="body"
              >
                0%
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="body"
              >
                $30.00
              </div>
            </td>
          </tr>
        </tbody>
      </table>
      <table>
        <tfoot>
          <tr>
            <td />
            <td
              colspan="2"
            >
              <div
                class=MuiTypography-root MuiTypography-bodyHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="bodyHl"
              >
                Subtotal (excl. tax)
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="invoice-details-table-footer-subtotal-excl-tax-value"
              >
                $200.00
              </div>
            </td>
          </tr>
          <tr>
            <td />
            <td
              colspan="2"
            >
              <div
                class=MuiTypography-root MuiTypography-bodyHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="bodyHl"
              >
                Tax (0%)
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="body"
              >
                $0.00
              </div>
            </td>
          </tr>
          <tr>
            <td />
            <td
              colspan="2"
            >
              <div
                class=MuiTypography-root MuiTypography-bodyHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="bodyHl"
              >
                Subtotal (incl. tax)
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="invoice-details-table-footer-subtotal-incl-tax-value"
              >
                $220.00
              </div>
            </td>
          </tr>
          <tr>
            <td />
            <td
              colspan="2"
            >
              <div
                class=MuiTypography-root MuiTypography-bodyHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="bodyHl"
              >
                Total
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="invoice-details-table-footer-total-value"
              >
                $220.00
              </div>
            </td>
          </tr>
          <tr>
            <td />
            <td
              colspan="2"
            >
              <div
                class=MuiTypography-root MuiTypography-bodyHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="bodyHl"
              >
                Amount settled
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="invoice-details-table-footer-total-paid-value"
              >
                $0.00
              </div>
            </td>
          </tr>
          <tr>
            <td />
            <td
              colspan="2"
            >
              <div
                class=MuiTypography-root MuiTypography-bodyHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="bodyHl"
              >
                Amount due
              </div>
            </td>
            <td>
              <div
                class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
                data-test="invoice-details-table-footer-total-due-value"
              >
                $0.00
              </div>
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </section>
</div>
`;
